<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="owning_meter_text">%s Owning</string>
	<string name="trading_meter_text">%s Trading</string>
	<string name="wanting_meter_text">%s Wanting</string>
	<string name="wishing_meter_text">%s Wishing</string>
	<string name="id_list_text" tools:ignore="MissingTranslation">ID: %s</string>
	<string name="play_id_prefix">Play ID: %s</string>
	<string name="designers">Designers</string>
	<string name="artists">Artists</string>
	<string name="publishers">Publishers</string>
	<string name="categories">Categories</string>
	<string name="mechanics">Mechanics</string>
	<string name="games">Games</string>
	<string name="expansions">Expansions</string>
	<string name="base_games">Base Games</string>
	<string name="collection_item">Collection Item</string>
	<string name="year_published">Year Published</string>
	<string name="published_prefix">Published %1$s %2$s</string>
	<string name="weight">Weight</string>
	<string name="average_weight">Weight</string>
	<string name="sync_pending_update">Update pending</string>
	<string name="sync_pending_delete">Delete pending</string>
	<string name="sync_draft">Draft</string>
	<string name="sync_editing">Editing</string>
	<string name="delete_pending_prefix">Delete pending as of %s</string>
	<string name="update_pending_prefix">Update pending as of %s</string>
	<string name="draft_prefix">Draft, last saved %s</string>
	<string name="editing_prefix">Editing, last saved %s</string>
	<string name="quantity">Quantity</string>
	<string name="length">Length</string>
	<string name="length_hint">Length (in minutes)</string>
	<string name="no_length">\?</string>
	<string name="location">Location</string>
	<string name="location_hint">Location name</string>
	<string name="no_location">&lt;No location&gt;</string>
	<string name="nowhere_in_angle_brackets">&lt;Nowhere&gt;</string>
	<string name="incomplete">Incomplete</string>
	<string name="noWinStats">Don\'t Count Win Stats</string>
	<plurals name="comments">
		<item quantity="one">comment</item>
		<item quantity="other">comments</item>
	</plurals>
	<string name="send">Send</string>
	<string name="save">Save</string>
	<string name="done">Done</string>
	<string name="next">Next</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="discard">Discard</string>
	<string name="continue_">Continue</string>
	<string name="reset">Reset</string>
	<string name="sort">Sort</string>
	<string name="keep_editing">Keep Editing</string>
	<string name="exact">Exact</string>
	<string name="exactly">Exactly</string>
	<string name="range">Range</string>
	<string name="single_value">Single value</string>
	<string name="none">None</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="other_date">Select Date</string>
	<string name="include_missing_values">Include games with missing values</string>
	<string name="filter_description_player_number">Only games that support this <b>entire range</b> of players will be shown. <i>Exact</i> means that only games that support that many players exactly will be shown (e.g. 2 player only games).</string>
	<string name="filter_description_include_missing_play_time">If you <b>include games with missing values</b>, the filter will show games with an unknown play time.</string>
	<string name="filter_description_include_missing_suggested_age">If you <b>include games with missing values</b>, the filter will show games without a suggested minimum age.</string>
	<string name="filter_description_include_missing_average_weight">If you <b>include games with missing values</b>, the filter will show games without a reported average weight.</string>
	<string name="clear">Clear</string>
	<string name="set">Set</string>
	<string name="randomize_all">All</string>
	<string name="randomize_start">1st</string>
	<plurals name="plays">
		<item quantity="one">%s play</item>
		<item quantity="other">%s plays</item>
	</plurals>
	<string name="played">Played</string>
	<string name="rated">Rated</string>
	<string name="commented">Commented</string>
	<string name="rematch">Rematch</string>
	<string name="menu_change_game">Change game</string>
	<string name="title_pick_start_player">Pick Start Player</string>
	<string name="title_players">Players</string>
	<string name="title_players_with_count">Players - %,d</string>
	<string name="title_location">Location</string>
	<string name="title_locations">Locations</string>
	<string name="title_player">Player</string>
	<string name="title_firebase_message">Message from the App developers</string>
	<string name="or">Or</string>
	<string name="and">And</string>
	<string name="delete">Delete</string>
	<string name="player_name">Player Name</string>
	<string name="username">Username</string>
	<string name="colors">Colors</string>
	<string name="team_color">Team/Color</string>
	<string name="team_color_prefix">Team/Color for %s</string>
	<string name="starting_position">Starting Position</string>
	<string name="score">Score</string>
	<string name="rating">Rating</string>
	<string name="geek_rating">Geek rating</string>
	<string name="my_rating">My rating</string>
	<string name="high_score">High Score</string>
	<string name="low_score">Low Score</string>
	<string name="average_score">Average Score</string>
	<string name="average_winning_score">Average Winning Score</string>
	<string name="average_rating">Average rating</string>
	<string name="new_label">New</string>
	<string name="win">Win</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="never">Never</string>
	<string name="keep">Keep</string>
	<string name="edit">Edit</string>
	<string name="modify">Modify</string>
	<string name="more">More</string>
	<string name="more_suffix" tools:ignore="PluralsCandidate">%,d more</string>
	<string name="image">Image</string>
	<string name="avatar">Avatar</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="in">in</string>
	<string name="before">before</string>
	<string name="after">after</string>
	<string name="status_of_prefix">Status of %s</string>
	<string name="spoiler">Spoiler</string>
	<string name="title_clear_colors">Clear Colors?</string>
	<string name="msg_clear_colors">Do you want to clear the existing colors before assigning new ones?</string>
	<string name="msg_fragment_error">You shouldn’t be seeing this message. But if you are, please send a screenshot of this to bgg4android@gmail.com. Thanks!</string>
	<string name="are_you_sure_title">Are You Sure?</string>
	<string name="discard_new_message">"Are you sure you want to discard this %s?"</string>
	<string name="discard_changes_message">"Are you sure you want to discard changes to this %s?"</string>
	<plurals name="are_you_sure_delete_play">
		<item quantity="one">Are you sure you want to delete this play?</item>
		<item quantity="other">Are you sure you want to delete these plays?</item>
	</plurals>
	<string name="title_search">Search</string>
	<string name="title_collection">Collection</string>
	<string name="title_hotness">The Hotness</string>
	<string name="title_settings">Settings</string>
	<string name="title_geeklists">GeekLists</string>
	<string name="title_buddies">GeekBuddies</string>
	<string name="title_forums">Forums</string>
	<string name="title_plays">Plays</string>
	<string name="title_backup">Backup</string>
	<string name="description_backup">Export will save data from the app to the selected file locations, overwriting the existing file if necessary. Import will restore data from these same files, potentially overwriting existing data.</string>
	<string name="backup_type_collection_view">Collection view</string>
	<string name="backup_type_game">Game</string>
	<string name="backup_type_user">User</string>
	<string name="backup_description_collection_view">Sorting and filtering applied to your collection and saved as views.</string>
	<string name="backup_description_game">The list of colors associated with each game.</string>
	<string name="backup_description_user">Users\' favorite colors, which includes both GeekBuddies and players you\'ve played against.</string>
	<string name="menu_search">Search</string>
	<string name="menu_view_in_browser">View in browser</string>
	<string name="menu_log_play">Log play</string>
	<string name="menu_log_play_short">Form</string>
	<string name="menu_log_play_wizard_short">Wizard</string>
	<string name="menu_log_play_quick_short">Quick</string>
	<string name="menu_favorite">Favorite</string>
	<string name="menu_users">Users</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_refresh_on">Refresh on…</string>
	<string name="menu_discard_changes">Discard changes</string>
	<string name="menu_view_image">View image</string>
	<string name="link_bgg">BoardGameGeek</string>
	<string name="menu_share">Share</string>
	<string name="menu_sort">Sort</string>
	<string name="menu_filter">Filter</string>
	<string name="menu_collection_filter_add">Add filter…</string>
	<string name="menu_collection_view_save">Save view…</string>
	<string name="menu_collection_view_delete">Delete view…</string>
	<string name="menu_plays_sort_date">Date</string>
	<string name="menu_plays_sort_location">Location</string>
	<string name="menu_plays_sort_game">Game</string>
	<string name="menu_plays_sort_length">Length</string>
	<string name="menu_sort_name">Name</string>
	<string name="menu_sort_quantity">Play count</string>
	<string name="menu_sort_wins">Wins</string>
	<string name="menu_collection_random_game">Random game</string>
	<string name="menu_create_shortcut">Pin shortcut</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_delete">Delete</string>
	<string name="all">All</string>
	<string name="collection_status_own">Own</string>
	<string name="collection_status_prev_owned">Previously Owned</string>
	<string name="collection_status_for_trade">For Trade</string>
	<string name="collection_status_want_to_play">Want to Play</string>
	<string name="collection_status_want_in_trade">Want in Trade</string>
	<string name="collection_status_want_to_buy">Want to Buy</string>
	<string name="collection_status_preordered">Preordered</string>
	<string name="collection_status_wishlist">Wishlist</string>
	<string name="title_top_games">Top Games</string>
	<string name="title_friendless_favorites">Friendless Favorites</string>
	<string name="title_hidden_gems">Hidden Gems</string>
	<string name="title_hawt">Hawt</string>
	<string name="title_why_own">Why Do You Own These?</string>
	<string name="title_favorite_unowned">Favorite Unowned</string>
	<string name="title_played_unowned">Played but Unowned</string>
	<string name="title_hawt_unowned">Hawt but Unowned</string>
	<string name="title_recently_played">Recently Played</string>
	<string name="title_friendless_play">You Should Play</string>
	<string name="title_shelf_of_opportunity">Shelf of Opportunity</string>
	<string name="title_shelf_of_new_opportunity">Shelf of New Opportunity</string>
	<string name="info_friendless_play">Games you own and like, but haven’t played in a while.</string>
	<string name="info_hidden_gems">Games you rate higher than the average.</string>
	<string name="info_hawt">I got a copy of this - jealous much?!</string>
	<string name="info_shelf_of_opportunity">Games you own but haven\'t played yet</string>
	<string name="info_shelf_of_new_opportunity">Games you\'ve just acquired but haven\'t played yet</string>
	<string name="best">Best</string>
	<string name="good">Good</string>
	<string name="supports">Supports</string>
	<string name="one_player">1P</string>
	<string name="two_players">2P</string>
	<string name="three_players">3P</string>
	<string name="four_players">4P</string>
	<string name="five_players">5P</string>
	<string name="six_players">6P</string>
</resources>