<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_log_play"
		android:icon="@drawable/ic_baseline_event_available_24"
		android:title="@string/menu_log_play"
		app:showAsAction="ifRoom">
		<menu>
			<group>
				<item
					android:id="@+id/menu_log_play_quick"
					android:title="@string/menu_log_play_quick_short"
					app:showAsAction="never" />
				<item
					android:id="@+id/menu_log_play_form"
					android:title="@string/menu_log_play_short"
					app:showAsAction="never" />
				<item
					android:id="@+id/menu_log_play_wizard"
					android:title="@string/menu_log_play_wizard_short"
					app:showAsAction="never" />
			</group>
		</menu>
	</item>
	<item
		android:id="@+id/menu_share"
		android:icon="@drawable/ic_baseline_share_24"
		android:title="@string/menu_share"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_link"
		android:icon="@drawable/ic_baseline_open_in_browser_24"
		android:title="@string/link_bgg"
		app:showAsAction="ifRoom" />

</menu>
