<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<item
		android:id="@+id/menu_collection_sort"
		android:icon="@drawable/ic_baseline_sort_24"
		android:title="@string/menu_sort"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction" />
	<item
		android:id="@+id/menu_collection_filter"
		android:icon="@drawable/ic_baseline_filter_list_24"
		android:title="@string/menu_collection_filter_add"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction" />
	<item
		android:id="@+id/menu_collection_view_save"
		android:icon="@drawable/ic_baseline_save_24"
		android:title="@string/menu_collection_view_save"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction" />
	<item
		android:id="@+id/menu_collection_view_delete"
		android:icon="@drawable/ic_baseline_delete_24"
		android:title="@string/menu_collection_view_delete"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_share"
		android:icon="@drawable/ic_baseline_share_24"
		android:title="@string/menu_share"
		app:showAsAction="never" />
	<item
		android:id="@+id/menu_collection_random_game"
		android:icon="@drawable/ic_baseline_casino_24"
		android:title="@string/menu_collection_random_game"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_create_shortcut"
		android:title="@string/menu_create_shortcut"
		app:showAsAction="never" />

</menu>
