<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="@dimen/material_margin_horizontal"
		android:paddingTop="@dimen/material_margin_vertical"
		android:paddingRight="@dimen/material_margin_horizontal"
		android:paddingBottom="@dimen/material_margin_vertical"
		tools:context=".ui.DataActivity">

		<TextView
			android:id="@+id/export_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/padding_extra"
			android:text="@string/description_backup" />

		<LinearLayout
			android:id="@+id/backup_types"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.boardgamegeek.ui.widget.DataStepRow
				android:id="@+id/collectionViewsRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:descriptionLabel="@string/backup_description_collection_view"
				app:titleLabel="@string/backup_type_collection_view" />

			<com.boardgamegeek.ui.widget.DataStepRow
				android:id="@+id/gamesRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:descriptionLabel="@string/backup_description_game"
				app:titleLabel="@string/backup_type_game" />

			<com.boardgamegeek.ui.widget.DataStepRow
				android:id="@+id/usersRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:descriptionLabel="@string/backup_description_user"
				app:titleLabel="@string/backup_type_user" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
