<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingHorizontal="@dimen/material_margin_horizontal_dialog"
	android:paddingVertical="@dimen/material_margin_vertical"
	android:paddingLeft="@dimen/material_margin_horizontal">

	<LinearLayout
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="own"
			android:text="@string/collection_status_own" />

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="previously_owned"
			android:text="@string/collection_status_prev_owned" />

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="for_trade"
			android:text="@string/collection_status_for_trade" />

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="want_to_play"
			android:text="@string/collection_status_want_to_play" />

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="want"
			android:text="@string/collection_status_want_in_trade" />

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="want_to_buy"
			android:text="@string/collection_status_want_to_buy" />

		<CheckBox
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="preordered"
			android:text="@string/collection_status_preordered" />

		<CheckBox
			android:id="@+id/wishlistView"
			style="@style/DialogCheckbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:tag="wishlist"
			android:text="@string/collection_status_wishlist" />

		<Spinner
			android:id="@+id/wishlistPriorityView"
			style="@style/DialogSpinner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="32dp" />
	</LinearLayout>
</ScrollView>