<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/menu_search"
		android:icon="@drawable/ic_action_search_light"
		android:orderInCategory="0"
		android:title="@string/menu_search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="always|collapseActionView"/>
	<item
		android:id="@+id/menu_view"
		android:icon="@drawable/ic_action_web_site_light"
		android:orderInCategory="1"
		android:title="@string/menu_view_in_browser"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_share"
		android:icon="@drawable/ic_action_share_light"
		android:orderInCategory="2"
		android:title="@string/menu_share"
		app:showAsAction="ifRoom"/>

</menu>