<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_list_count"
        android:title=""
        app:actionLayout="@layout/actionbar_text"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort_light"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/menu_sort_name"/>
                <item
                    android:id="@+id/menu_sort_quantity"
                    android:title="@string/menu_sort_quantity"/>
            </group>
        </menu>
    </item>
</menu>